<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:text="@string/feature_collaborative_writing"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp" />

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_text"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/editNarrative"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:hint="@string/hint_narrative"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/editAssignee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_assignee"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/editStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_status"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_save"
            android:layout_marginTop="8dp" />
    </LinearLayout>
</ScrollView>
